<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.GifPagerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/gif_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/developers_life"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        style="@style/TabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest">
        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top" />
    </com.google.android.material.tabs.TabLayout>

    <fragment
        android:name="com.example.gifapp.ui.random.GifRandomFragment"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>