<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    app:cardCornerRadius="10dp"
    android:layout_width="128dp"
    android:layout_margin="8dp"
    android:layout_height="240dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/favorite_item_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:contentDescription="@string/favorite_item_gif_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/favorite_item_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:singleLine="true"
            android:text="@string/favorite_item_gif_content"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:textColor="@color/black" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite_item_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/blue_400"
            android:contentDescription="@string/gif_favorite_select_fab"
            android:src="@drawable/ic_select_24"
            android:visibility="invisible"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="@+id/favorite_item_iv"
            app:layout_constraintTop_toTopOf="@+id/favorite_item_iv"
            app:tint="@color/white"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>